@startuml

interface Schedulable {
    +schedule(timeSlot: String)
}

interface Billable {
    +calculatePay(): double
}

class Person {
  +name: String
  +age: int
  +getInfo(): String
}

Person <|-- Patient
Person <|-- Doctor

abstract class Staff {
    -name: String
    -age: int
    +performDuties(): void
}

Person <|-- Staff

class Nurse {
    -hourlyRate: double
    -hoursWorked: int
    +performDuties(): void
    +schedule(timeSlot: String): void
    +calculatePay(): double
}

class AdministrativeStaff {
    -monthlySalary: double
    +performDuties(): void
    +calculatePay(): double
}


class Doctor {
    -specialization: String
    -monthlySalary: double
    +diagnose(): void
    +calculatePay(): double
}

Staff <|-- Nurse
Staff <|-- AdministrativeStaff

Nurse ..|> Schedulable
Staff ..|> Billable
Doctor ..|> Billable

@enduml

